--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -6,10 +6,6 @@
 <a href="{{ "blog" | relURL }}">Blog</a>
 {{ end }}
 
-{{/* Código original do nav.html (links Home, Blog, etc.) deve estar acima */}}
-
-{{/* Adicione o botão DEPOIS dos links normais do menu */}}
-{{/* ... outros links do menu ... */}}
 
 <button id="theme-toggle" title="Alternar tema" aria-label="Alternar tema" aria-live="polite" style="background:none; border:none; padding:0; cursor:pointer; vertical-align: middle; /* margin-left removido */ line-height: 1;">
 
@@ -19,10 +15,10 @@
   {{/* Ícone para tema escuro (Lua) */}}
   <span class="icon-dark"><i class="fi fi-br-moon"></i></span>
 
-  {{/* Ícone para tema leaf (Folha - usando fi-rr-leaf como exemplo) */}}
-  <span class="icon-leaf"><i class="fi fi-br-plant-wilt"></i></span>
+  {{/* Ícone para tema ecologic (Folha) */}}
+  <span class="icon-ecologic"><i class="fi fi-br-plant-wilt"></i></span>
 
-  {{/* Ícone para tema cake (Bolo - usando fi-rr-cake-slice como exemplo) */}}
-  <span class="icon-cake"><i class="fi fi-sr-cherry"></i></span>
+  {{/* Ícone para tema cherry (Cereja) */}}
+  <span class="icon-cherry"><i class="fi fi-sr-cherry"></i></span>
 
 </button>
