--- a/layouts/_default/_markup/render-image.html
+++ b/layouts/_default/_markup/render-image.html
@@ -1,6 +1,3 @@
-{{/* Arquivo: layouts/_default/_markup/render-image.html */}}
-{{/* Versão CORRIGIDA */}}
-
 {{ $src := .Page.Resources.GetMatch (printf "%s" (.Destination | safeURL)) }}
 
 {{ if $src }}
@@ -26,8 +23,8 @@
     {{ $imgHeight := $data.Get "height" }}
 
     {{/* Link opcional para a imagem original */}}
-    <a href="{{ $src.RelPermalink }}" target="_blank" rel="noopener noreferrer"> {{/* <<< TAG <a> DE ABERTURA ADICIONADA */}}
-      <picture> {{/* <<< TAG <picture> DE ABERTURA ADICIONADA */}}
+    <a href="{{ $src.RelPermalink }}" target="_blank" rel="noopener noreferrer">
+      <picture>
         <source srcset="{{ $webp.RelPermalink }}" type="image/webp">
         <img src="{{ $fallback.RelPermalink }}"
              alt="{{ .Text }}"
@@ -35,10 +32,10 @@
              decoding="async"
              width="{{ $imgWidth }}"
              height="{{ $imgHeight }}" />
-      </picture> {{/* <<< Tag de fechamento */}}
-    </a> {{/* <<< Tag de fechamento */}}
+      </picture>
+    </a>
 
-    {{/* Legenda opcional */}}
+    {{/* Legenda das imagens */}}
     {{ with .Title }}<figcaption style="text-align: center; font-size: 0.9em; color: var(--text-color); margin-top: 0.5em;">{{ . | markdownify }}</figcaption>{{ end }}
   </figure>
 {{ else }}
