--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -52,7 +52,6 @@ html.cherry {
   --code-color:       #8B4513;
   --blockquote-color: #A0522D;
 }
-}
     
  @media (prefers-color-scheme: dark) {
   html:not(.light):not(.ecologic):not(.cherry) {
@@ -252,13 +251,12 @@ html.cherry #theme-toggle { color: var(--link-color); }
   @media (max-width: 767px) {
     main ul li a { max-width: 60%; display: block; font-size: 1em; }
     main ul li span { display: block; text-align: left; margin-left: 0; margin-top: 0.3em; }
-    main article h1 { max-width: 80%;
+    main article h1 { max-width: 80%; }
     body { padding: 20px; }
     header p.site-title { font-size: 1.4em; }
-    header a.title { margin-bottom: 0.25em;}
+    header a.title { margin-bottom: 0.25em; }
     #theme-toggle { font-size: 0.9em; }
-
-  } /* --- Fim da Media Query --- */
+  }
 
 
   /* --- Estilos para Figure/Figcaption (Otimização de Imagem) --- */
