--- a/layouts/partials/seo_tags.html
+++ b/layouts/partials/seo_tags.html
@@ -1,5 +1,3 @@
-{{- /* layouts/partials/seo_tags.html */ -}}
-
 {{- /* Determina o título e a descrição a serem usados nas meta tags */ -}}
 {{- $title := .Title | default .Site.Title -}}
 {{- $desc := .Description | default (.Summary | default .Site.Params.description) -}}
@@ -20,7 +18,7 @@
 {{- if not $ogAlt -}}
     {{- $ogAlt = "Desenho estilizado em linha (preto e branco) do rosto de Breno Santana, autor do Breno's Blog, com óculos redondos e barba." -}} {{/* <== SEU TEXTO PADRÃO */}}
 {{- end -}}
-{{- /* Adiciona a tag meta somente se $ogAlt tiver algum valor */ -}}
+{{- /* Adiciona a tag meta somente se "$ogAlt" tiver algum valor */ -}}
 {{- with $ogAlt }}
 <meta property="og:image:alt" content="{{ . }}" />
 {{- end }}
@@ -36,7 +34,7 @@
 {{- if not $twAlt -}}
     {{- $twAlt = "Desenho estilizado em linha (preto e branco) do rosto de Breno Santana, autor do Breno's Blog, com óculos redondos e barba." -}} {{/* <== SEU TEXTO PADRÃO */}}
 {{- end -}}
-{{- /* Adiciona a tag meta somente se $twAlt tiver algum valor */ -}}
+{{- /* Adiciona a tag meta somente se "$twAlt" tiver algum valor */ -}}
 {{- with $twAlt }}
 <meta name="twitter:image:alt" content="{{ . }}" />
 {{- end }}
