Atualização de CSS

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -95,6 +95,23 @@ html.cherry {
     transition: background-color 0.3s ease, color 0.3s ease;
   }
 
+a.footnote-ref {
+    font-size: 0.8em;
+    color: var(--link-color);
+    font-weight: bold;
+}
+
+a.footnote-backref {
+    font-size: 0.8em;
+    color: var(--link-color);
+    font-weight: unset;
+}
+
+div.footnotes {
+  font-size: 0.9em;
+  color: var(--link-color);
+}
+
   /* --- Cabeçalhos --- */
   h1 { font-family: var(--font-main); color: var(--heading-color); font-size: 1.2em; font-weight: bold;}
   h2 { font-family: var(--font-main); color: var(--heading-color); font-size: 1em; font-weight: bold;}
